7: The Return
- iPhone users will now see their bookmarks in a slide over view!
- In split view there will be progress bars for each side!
- Added a mechanism to get urgent alerts from uApps
- Snow is now more performant

6.4.1:
- Snowfall is dynamic! Snow will show and disappear based on months, no more updating the app for snow!
- On newer iOS Versions (13+) internet information will use an improved system, allowing for less wait time.

6.4:
- Support for iOS 14
- Snow is back for the cold weather seasons!
- Changed the image behind the blur in settings
- Changed the blur to be dark for a better effect in settings
- Made changes to have the info labels populate better and have no more "blank" info labels.
- Made changes to how the currently running label works making it less prone to showing... the wrong version.
- Small behind the scenes changes.

6.3.1:
- Removed snow.
- Removed festive icon
- Updated the background fetch for internet labels, this will result in less null labels and one less network call!

6.3:
- Added snow falling to the info screen! Happy Holidays!
- Making the uSurf icon a little more festive... 
- Fixed a bug on the iPhone where hitting privacy policy would open the sharesheet to share uSurf.

6.2:
- Updated the URL Bar to have a border around the text area when in light mode. 
- Updates the search bar: Search bars now conform to the theme selected in the app instead of just being black and white!
- Updates to the way that uSurf fetches information about the app. This will result in less network calls and more information.

6.1:
- Updated for iOS 13:
    - Dark / Light Themes have been replaced by "System" for iOS 13
    - Views on iPhone now are a slide view. You can dismiss them using home buttons or just slide down their navigation bar to go home
    - Settings on iPad are also now a slide
- Transitions: Now on iPad with Split View only the selected web view will refresh saving on the amount of refreshes.