@@ -13,6 +13,7 @@
 		2E23168D2421B4390003BB54 /* VersionHandlerTests.swift in Sources */ = {isa = PBXBuildFile; fileRef = 2E23168C2421B4390003BB54 /* VersionHandlerTests.swift */; };
 		2E23168F2421B4F90003BB54 /* WebHandler.swift in Sources */ = {isa = PBXBuildFile; fileRef = 340906D620D9C01D009F53F1 /* WebHandler.swift */; };
 		2E27462D27683DAE005E00B9 /* SideMenuHostViewController.swift in Sources */ = {isa = PBXBuildFile; fileRef = 2E27462C27683DAD005E00B9 /* SideMenuHostViewController.swift */; };
+		2E76967727C709B8007A835C /* TLDHandler.swift in Sources */ = {isa = PBXBuildFile; fileRef = 2E76967627C709B8007A835C /* TLDHandler.swift */; };
 		2EA04356231CC48400812246 /* .swiftlint.yml in Resources */ = {isa = PBXBuildFile; fileRef = 2E482498231CAF5200F4C969 /* .swiftlint.yml */; };
 		2ECC641423987EBE00FD504A /* spark.png in Resources */ = {isa = PBXBuildFile; fileRef = 2ECC641323987EBD00FD504A /* spark.png */; };
 		2ECC64282398897000FD504A /* hiPhone3x.png in Resources */ = {isa = PBXBuildFile; fileRef = 2ECC64222398896F00FD504A /* hiPhone3x.png */; };
@@ -90,6 +91,7 @@
 		2E27462C27683DAD005E00B9 /* SideMenuHostViewController.swift */ = {isa = PBXFileReference; lastKnownFileType = sourcecode.swift; path = SideMenuHostViewController.swift; sourceTree = "<group>"; };
 		2E482498231CAF5200F4C969 /* .swiftlint.yml */ = {isa = PBXFileReference; lastKnownFileType = text.yaml; path = .swiftlint.yml; sourceTree = "<group>"; };
 		2E683B032329EDA6008BA3E7 /* uSurf.entitlements */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text.plist.entitlements; path = uSurf.entitlements; sourceTree = "<group>"; };
+		2E76967627C709B8007A835C /* TLDHandler.swift */ = {isa = PBXFileReference; lastKnownFileType = sourcecode.swift; path = TLDHandler.swift; sourceTree = "<group>"; };
 		2ECC641323987EBD00FD504A /* spark.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = spark.png; sourceTree = "<group>"; };
 		2ECC64222398896F00FD504A /* hiPhone3x.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = hiPhone3x.png; sourceTree = "<group>"; };
 		2ECC64232398897000FD504A /* hicon_iPad2x.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = hicon_iPad2x.png; sourceTree = "<group>"; };
@@ -255,6 +257,7 @@
 				344C3F0A20D75D6000A13939 /* SavedDataHandler.swift */,
 				3460A5F7210BC9450029B03C /* ThemeHandler.swift */,
 				2E1A880C232F2AF100D63F99 /* AppUtility.swift */,
+				2E76967627C709B8007A835C /* TLDHandler.swift */,
 			);
 			path = Handelers;
 			sourceTree = "<group>";
@@ -668,6 +671,7 @@
 				344C3F0920D7501600A13939 /* iCloudHandler.swift in Sources */,
 				343F015E20D41F0700B9E8DD /* iPadHomeViewController.swift in Sources */,
 				342CBE1E218231D3006D2D04 /* HistoryViewController.swift in Sources */,
+				2E76967727C709B8007A835C /* TLDHandler.swift in Sources */,
 				344C3F0B20D75D6000A13939 /* SavedDataHandler.swift in Sources */,
 				2E27462D27683DAE005E00B9 /* SideMenuHostViewController.swift in Sources */,
 				343F015C20D41EF900B9E8DD /* iPhoneHomeViewController.swift in Sources */,
