@@ -16,6 +16,7 @@ class AppDelegate: UIResponder, UIApplicationDelegate {
     var window: UIWindow?
     
     func application(_ application: UIApplication, didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey: Any]?) -> Bool {
+        TLDHandler.fetchTLD()
         // Override point for customization after application launch.
        // GADMobileAds.configure(withApplicationID: "ca-app-pub-7714978111013265~7068019503") depricated
         GADMobileAds.sharedInstance().start(completionHandler: nil)
