@@ -2,6 +2,7 @@
 - iPhone users will now see their bookmarks in a slide over view!
 - In split view there will be progress bars for each side!
 - Added a mechanism to get urgent alerts from uApps
+- Added a domain checker, this means more urls (e.g .xyz) is recognized as a web address instead of being google searched.
 - Snow is now more performant
 
 6.4.1:
